--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
 
-    // dependency for Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    // JSON Parsing
-    implementation 'com.google.code.gson:gson:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
