--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
