1) UI fine tuning 2) sending emp phone instead of name in note 3) note activity functionality change

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
             android:configChanges="locale"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Presenti.NoActionBar"
-            android:windowSoftInputMode="adjustPan" />
+            android:theme="@style/Theme.Presenti.NoActionBar"/>
         <activity
             android:name="com.mylozo.presenti.app.view.MarkAttendanceActivity"
             android:configChanges="locale"
