--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
         applicationId "com.mylozo.presenti.app"
         minSdk 21
         targetSdk 31
-        versionCode 1803202218
-        versionName "1.0.8"
+        versionCode 1803202219
+        versionName "1.0.8b1"
 
         archivesBaseName = "Presenti_v${versionName}_(${versionCode})"
 
@@ -43,13 +43,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-    buildFeatures {
-        viewBinding true
-    }
-
-    afterEvaluate {
-        bundleRelease
     }
 }
 
